--- a/index.html
+++ b/index.html
@@ -2,9 +2,471 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title here</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sohel Maniyar - Data Science Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Montserrat:wght@600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <style>
+        /* General Styles */
+        :root {
+            --primary-color: #00bcd4; /* Cyan/Teal - Professional highlight */
+            --secondary-color: #f3f3f3; /* Light gray for text */
+            --background-color: #1a1a2e; /* Dark blue/purple - Modern dark theme */
+            --card-color: #2c2c44; /* Slightly lighter dark for cards */
+            --font-family: 'Roboto', sans-serif;
+            --header-font: 'Montserrat', sans-serif;
+        }
+
+        * {
+            box-sizing: border-box;
+            margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: var(--font-family);
+            background-color: var(--background-color);
+            color: var(--secondary-color);
+            line-height: 1.6;
+            scroll-behavior: smooth;
+        }
+
+        a {
+            color: var(--primary-color);
+            text-decoration: none;
+            transition: color 0.3s ease;
+        }
+
+        a:hover {
+            color: #ffffff;
+        }
+
+        /* Header/Navigation */
+        header {
+            background-color: var(--background-color);
+            padding: 1rem 0;
+            border-bottom: 1px solid var(--card-color);
+        }
+
+        nav {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
+
+        .logo {
+            font-family: var(--header-font);
+            font-size: 1.8rem;
+            font-weight: 700;
+            color: var(--primary-color);
+        }
+
+        .nav-links a {
+            margin-left: 20px;
+            font-weight: 400;
+            font-size: 1rem;
+            letter-spacing: 0.5px;
+            padding: 5px 10px;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-links a:hover {
+            background-color: var(--card-color);
+            color: var(--primary-color);
+        }
+
+        /* Main Content */
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 40px 20px;
+        }
+
+        section {
+            padding: 60px 0;
+            min-height: 50vh;
+        }
+
+        h2 {
+            font-family: var(--header-font);
+            font-size: 2.5rem;
+            color: var(--primary-color);
+            margin-bottom: 30px;
+            border-bottom: 2px solid var(--card-color);
+            padding-bottom: 10px;
+        }
+
+        /* Hero Section */
+        #hero {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 40px;
+            padding-top: 100px;
+            padding-bottom: 100px;
+        }
+
+        .hero-content h1 {
+            font-size: 3.5rem;
+            margin-bottom: 10px;
+            font-family: var(--header-font);
+        }
+
+        .hero-content p {
+            font-size: 1.5rem;
+            color: #aaa;
+            margin-bottom: 20px;
+        }
+
+        .highlight-text {
+            color: var(--primary-color);
+            font-weight: 700;
+        }
+
+        .hero-image {
+            width: 250px;
+            height: 250px;
+            background-color: var(--card-color);
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            box-shadow: 0 0 40px rgba(0, 188, 212, 0.4);
+        }
+
+        .hero-image .s-letter {
+            font-family: var(--header-font);
+            font-size: 10rem;
+            font-weight: 800;
+            color: var(--primary-color);
+            text-shadow: 0 0 10px var(--primary-color);
+        }
+
+        .social-links {
+            margin-top: 30px;
+        }
+
+        .social-links a {
+            font-size: 1.8rem;
+            margin-right: 20px;
+            transition: transform 0.3s ease;
+            display: inline-block;
+        }
+
+        .social-links a:hover {
+            transform: scale(1.1);
+        }
+
+        /* Profile/About Section */
+        #profile p {
+            font-size: 1.1rem;
+            margin-bottom: 15px;
+            max-width: 900px;
+        }
+
+        /* Skills Section */
+        .skills-list {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 20px;
+            margin-top: 20px;
+        }
+
+        .skill-group h3 {
+            color: var(--primary-color);
+            margin-bottom: 10px;
+            font-size: 1.4rem;
+            border-bottom: 1px dashed var(--card-color);
+            padding-bottom: 5px;
+        }
+
+        .skill-group ul {
+            list-style: none;
+        }
+
+        .skill-group li {
+            padding: 5px 0;
+            font-size: 1rem;
+        }
+
+        /* Projects Section */
+        .projects-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
+        .project-card {
+            background-color: var(--card-color);
+            padding: 30px;
+            border-radius: 10px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        }
+
+        .project-card:hover {
+            transform: translateY(-10px);
+            box-shadow: 0 10px 30px rgba(0, 188, 212, 0.15);
+        }
+
+        .project-card h3 {
+            font-family: var(--header-font);
+            color: var(--primary-color);
+            margin-bottom: 15px;
+            font-size: 1.8rem;
+        }
+
+        .project-card p {
+            margin-bottom: 20px;
+            font-size: 1rem;
+        }
+
+        .project-links a {
+            display: inline-block;
+            padding: 10px 15px;
+            border-radius: 5px;
+            font-weight: 700;
+            margin-right: 15px;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        .project-links .source-link {
+            background-color: transparent;
+            border: 2px solid var(--primary-color);
+        }
+
+        .project-links .source-link:hover {
+            background-color: var(--primary-color);
+            color: var(--background-color);
+        }
+
+        .project-links .live-demo-btn {
+            background-color: var(--primary-color); /* Highlighting Button */
+            color: var(--background-color);
+            box-shadow: 0 4px 10px rgba(0, 188, 212, 0.5);
+        }
+
+        .project-links .live-demo-btn:hover {
+            background-color: #008c99;
+            box-shadow: 0 6px 15px rgba(0, 188, 212, 0.7);
+        }
+
+        /* Education/Certificates */
+        .education-list {
+            margin-top: 20px;
+        }
+        .education-item {
+            background-color: var(--card-color);
+            padding: 20px;
+            border-left: 5px solid var(--primary-color);
+            margin-bottom: 20px;
+            border-radius: 5px;
+        }
+        .education-item h4 {
+            font-size: 1.2rem;
+            margin-bottom: 5px;
+            color: var(--secondary-color);
+        }
+        .education-item span {
+            display: block;
+            color: #aaa;
+            font-style: italic;
+            margin-top: 5px;
+        }
+
+        /* Footer */
+        footer {
+            text-align: center;
+            padding: 20px 0;
+            margin-top: 40px;
+            border-top: 1px solid var(--card-color);
+            font-size: 0.9rem;
+            color: #999;
+        }
+
+        /* Responsive Design */
+        @media (max-width: 768px) {
+            #hero {
+                flex-direction: column-reverse;
+                text-align: center;
+                padding-top: 60px;
+                padding-bottom: 60px;
+            }
+
+            .hero-content h1 {
+                font-size: 2.5rem;
+            }
+
+            .hero-content p {
+                font-size: 1.2rem;
+            }
+
+            .hero-image {
+                margin-bottom: 40px;
+                width: 200px;
+                height: 200px;
+            }
+
+            .hero-image .s-letter {
+                font-size: 8rem;
+            }
+
+            .social-links {
+                justify-content: center;
+                display: flex;
+            }
+        }
+    </style>
 </head>
 <body>
- <h1> hello world</h1>
+
+    <header>
+        <nav>
+            <div class="logo">SOHEL MANIYAR</div>
+            <div class="nav-links">
+                <a href="#profile">Profile</a>
+                <a href="#skills">Skills</a>
+                <a href="#projects">Projects</a>
+                <a href="#education">Education</a>
+            </div>
+        </nav>
+    </header>
+
+    <main class="container">
+
+        <section id="hero">
+            <div class="hero-content">
+                <h1>Hello, I'm <span class="highlight-text">SOHEL MANIYAR</span>.</h1>
+                [cite_start]<p>An aspiring <span class="highlight-text">Data Scientist</span> passionate about leveraging data-driven insights to create impactful solutions[cite: 5].</p>
+                [cite_start]<p>I am proficient in Python, SQL, Data Structures & Algorithms, and actively pursuing expertise in Machine Learning and AI[cite: 3, 4].</p>
+
+                <div class="social-links">
+                    <a href="https://linkedin.com/in/sohel-maniyar" target="_blank" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://github.com/Maniyar07" target="_blank" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="mailto:contactsohel22@gmail.com" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="tel:+919696680808" title="Phone"><i class="fas fa-phone"></i></a>
+                </div>
+            </div>
+            <div class="hero-image">
+                <span class="s-letter">S</span>
+            </div>
+        </section>
+
+        <section id="profile">
+            <h2><i class="fas fa-user-circle"></i> Profile</h2>
+            [cite_start]<p>Proficient in Python programming and Data Structures & Algorithms with strong analytical skills[cite: 3].</p>
+            [cite_start]<p>Currently pursuing expertise in Data Science, Machine Learning, and AI, with hands-on practice in real-world problem solving[cite: 4].</p>
+            [cite_start]<p>My future goal is to grow into a skilled Senior Data Scientist[cite: 5].</p>
+        </section>
+
+        <section id="skills">
+            <h2><i class="fas fa-tools"></i> Skills & Expertise</h2>
+            <div class="skills-list">
+                <div class="skill-group">
+                    <h3>Programming Languages</h3>
+                    <ul>
+                        [cite_start]<li>Python [cite: 9]</li>
+                        [cite_start]<li>SQL [cite: 9]</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>Data Science & ML</h3>
+                    <ul>
+                        [cite_start]<li>Exploratory Data Analysis (EDA) [cite: 10]</li>
+                        [cite_start]<li>Machine Learning [cite: 10]</li>
+                        [cite_start]<li>Scikit-learn [cite: 10]</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>Python Libraries</h3>
+                    <ul>
+                        [cite_start]<li>NumPy [cite: 11]</li>
+                        [cite_start]<li>Pandas [cite: 11]</li>
+                        [cite_start]<li>Matplotlib [cite: 11]</li>
+                        [cite_start]<li>Seaborn [cite: 11]</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>Web Development & Tools</h3>
+                    <ul>
+                        [cite_start]<li>Flask [cite: 12]</li>
+                        [cite_start]<li>HTML / CSS / JavaScript [cite: 12]</li>
+                        [cite_start]<li>GitHub [cite: 2]</li>
+                    </ul>
+                </div>
+                <div class="skill-group">
+                    <h3>Soft Skills</h3>
+                    <ul>
+                        [cite_start]<li>Problem-solving [cite: 13]</li>
+                        [cite_start]<li>Communication [cite: 13]</li>
+                        [cite_start]<li>Teamwork [cite: 13]</li>
+                        [cite_start]<li>Time Management [cite: 13]</li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section id="projects">
+            <h2><i class="fas fa-project-diagram"></i> Key Projects</h2>
+            <div class="projects-grid">
+                <div class="project-card">
+                    [cite_start]<h3>Diabetes Risk Prediction Web Application [cite: 15]</h3>
+                    [cite_start]<p>A full-stack deployment of a binary classification machine learning model, utilizing Flask for the web service layer[cite: 16].</p>
+                    <p>
+                        **Key Achievements:**
+                        <ul>
+                            [cite_start]<li>Designed and implemented a robust Flask application with dedicated routing (/, /predict) to serve the front-end and handle prediction requests[cite: 18].</li>
+                            [cite_start]<li>Successfully loaded a pre-trained Scikit-learn model and engineered the data pipeline to receive 8 distinct health features from the user[cite: 19].</li>
+                            [cite_start]<li>Managed deployment on PythonAnywhere, troubleshooting file path and server configuration issues for reliable availability[cite: 20].</li>
+                        </ul>
+                    </p>
+                    <p>
+                        [cite_start]**Tech Stack:** Python, Flask, Scikit-learn, NumPy, HTML/CSS, PythonAnywhere [cite: 17]
+                    </p>
+                    <div class="project-links">
+                        <a href="https://github.com/Maniyar07/Flask-Diabetes-Prediction-App" target="_blank" class="source-link">
+                            [cite_start]<i class="fab fa-github"></i> Source Code [cite: 21]
+                        </a>
+                        <a href="https://sohel08.pythonanywhere.com/" target="_blank" class="live-demo-btn">
+                            [cite_start]<i class="fas fa-play-circle"></i> **Live Demo** [cite: 22]
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <section id="education">
+            <h2><i class="fas fa-graduation-cap"></i> Education & Certificates</h2>
+
+            <div class="education-list">
+                <div class="education-item">
+                    [cite_start]<h4>Bachelor Of Technology - 7.24 CGPA [cite: 7]</h4>
+                    <span>TPCT'S College of Engineering, Osmanabad | [cite_start]2021-2025 [cite: 7]</span>
+                </div>
+                <div class="education-item">
+                    [cite_start]<h4>HSC - 91.00% [cite: 7]</h4>
+                    <span>Shri Tripura Junior Science College, Latur | [cite_start]2020-2021 [cite: 7]</span>
+                </div>
+            </div>
+
+            <h3 style="color: var(--secondary-color); margin-top: 40px; border-bottom: 1px solid var(--card-color); padding-bottom: 5px;">Certifications</h3>
+            <div class="education-list">
+                <div class="education-item">
+                    [cite_start]<h4>Basics of Python - Infosys Springboard [cite: 24]</h4>
+                    [cite_start]<span>Awarded: Feb 2024 [cite: 24]</span>
+                    [cite_start]<p style="margin-top: 10px; font-size: 0.95rem;">Gained foundational knowledge of Python programming, control structures, and basic data handling[cite: 25]. [cite_start]Strengthened problem-solving and logical thinking skills essential for data science applications[cite: 26].</p>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        &copy; 2025 SOHEL MANIYAR. Built with a passion for Data Science.
+    </footer>
+
 </body>
 </html>
